force-app/main/default/objects/Payment__c/fields/Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Number__c</fullName>
    <label>Cheque Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>