force-app/main/default/objects/Payment__c/fields/Refund_Method__c.field-meta.xml
<CustomField>
    <fullName>Refund_Method__c</fullName>
    <label>Refund Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Back to Original Payment Method</fullName>
            </value>
            <value>
                <fullName>Cheque or Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Cash Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>