force-app/main/default/objects/Payment__c/fields/Refund_Notes__c.field-meta.xml
<CustomField>
    <fullName>Refund_Notes__c</fullName>
    <label>Refund Notes</label>
    <type>TextArea</type>
</CustomField>