force-app/main/default/objects/Payment__c/fields/Refund_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Refund_Transaction_ID__c</fullName>
    <label>Refund Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>