force-app/main/default/objects/Payment__c/fields/Source_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Source_Of_Payment__c</fullName>
    <label>Source Of Payment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
                <default>true</default>
                <label>Website</label>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>PineLabs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>