force-app/main/default/objects/Payment__c/validationRules/paid_amount_cannot_be_less_than_2500.validationRule-meta.xml
<ValidationRule>
    <fullName>paid_amount_cannot_be_less_than_2500</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Enquiry__c)),
    Amount__c &lt;= 2500
)</errorConditionFormula>
    <errorMessage>Initial Amount Should be Greater than 2500</errorMessage>
</ValidationRule>