force-app/main/default/objects/Payment__c/validationRules/Payment_ID_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_ID_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Mode_Of_Payment__c, &quot;CARD&quot;) || ISPICKVAL(Mode_Of_Payment__c, &quot;UPI&quot;),
    ISBLANK(Transaction_Id__c)
)</errorConditionFormula>
    <errorDisplayField>Transaction_Id__c</errorDisplayField>
    <errorMessage>Payment ID is required when Mode of Payment is CARD or UPI.</errorMessage>
</ValidationRule>