force-app/main/default/objects/Payment__c/validationRules/Phone_Number_should_take_only_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_should_take_only_numeric</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Phone__c , &quot;^[0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>&quot;Phone number must contain only numerical digits (0-9). Please remove any non-numeric characters.&quot;</errorMessage>
</ValidationRule>