force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Mode_Of_Payment__c</columns>
    <columns>Transaction_Id__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Source_Of_Payment__c</columns>
    <columns>Tracking_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Payments</label>
</ListView>